Fix [Jobs][Artifacts] Broken layout when narrowing view size (#47)
- Fixed visual bug on collapse/expand or selecting a job
- Fixed broken flex layout

--- a/src/components/Table/table.scss
+++ b/src/components/Table/table.scss
@@ -12,36 +12,38 @@
   &__content {
     width: 100%;
     .jobs_medium {
-      @include tableColumnFlex(18%);
-      min-width: 18%;
+      @include tableColumnFlex(1, 240px);
     }
     .jobs_small {
-      @include tableColumnFlex(8.5%);
+      @include tableColumnFlex(0.8, 80px);
     }
     .jobs_big {
-      @include tableColumnFlex(19.75%);
+      @include tableColumnFlex(2, 80px);
     }
     .artifacts_medium {
-      @include tableColumnFlex(15%);
+      @include tableColumnFlex(1, 240px);
     }
     .artifacts_small {
-      @include tableColumnFlex(5.5%);
+      @include tableColumnFlex(1, 80px);
     }
     .artifacts_big {
-      @include tableColumnFlex(21%);
+      @include tableColumnFlex(2.5, 80px);
     }
     .artifacts_date {
-      @include tableColumnFlex(11%);
+      @include tableColumnFlex(1, 80px);
     }
     .artifacts_small:nth-child(3) {
       padding-left: 20px;
     }
     .artifacts_small:nth-child(5) {
-      @include tableColumnFlex(9.5%);
+      @include tableColumnFlex(1, 80px);
+    }
+    .artifacts_small:nth-child(6) {
+      flex: 0.5;
     }
     .artifacts_small:nth-child(9),
     .artifacts_small:nth-child(10) {
-      @include tableColumnFlex(3.5%);
+      @include tableColumnFlex(0.5, 80px);
     }
   }
   &-head {
@@ -59,10 +61,12 @@
       min-height: 50px;
       flex-direction: row;
       &.parent-row {
-        &:hover {
-          background-color: $alabaster;
-          .row__actions {
-            display: block;
+        &:not(.parent-row-expanded) {
+          &:hover {
+            background-color: $alabaster;
+            .row__actions {
+              display: block;
+            }
           }
         }
         &-expanded {
@@ -81,6 +85,12 @@
             }
             &__cell {
               display: flex;
+            }
+            &:hover {
+              background-color: $alabaster;
+            }
+            &.active {
+              background-color: $alabaster;
             }
           }
         }
