--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -106,7 +106,7 @@
   padding: 0;
 }
 
-@mixin tableColumnFlex($flex) {
-  max-width: $flex;
-  flex: 0 0 $flex;
+@mixin tableColumnFlex($flex, $min) {
+  min-width: $min;
+  flex: $flex;
 }
